# Studere-School-Planner

./: .gitmodules  README.md
backend/: .gitignore  app.py  docker-compose.local.yaml  dockerfile.local  initialize_db.py  main.py  models.py  note  note.txt  pyproject.toml  readme.md  requirements.txt  routes.py  test-openai.py
backend/.devcontainer/: devcontainer.json
backend/api/routers/: assignment.py  assignment_router.py  course_router.py  studyplan_router.py  task.py  task_router.py  user.py
backend/core/: constants.py  repository.py  security.py  service.py  singleton.py
backend/db/: session.py
backend/instance/: studyapp.db
backend/models/: assignment.py  course.py  study_plan.py  task.py  user.py
backend/repositories/: assignment_repository.py  course_repository.py  study_plan_repository.py  task_repository.py  user_repository.py
backend/schemas/: assignment_schemas.py  course_schemas.py  study_plan_schemas.py  task_schemas.py  user_schemas.py
backend/services/: assignment_service.py  course_service.py  openai_service.py  study_plan_service.py  task_service.py  user_service.py
frontend/: package.json  tsconfig.json
frontend/src/components/: addCourseModal.js  addSessionModal.js  assignmentsTable.js  assignmnetModal.js  courseCard.js  courseComparisonChart.js  courseList.js  courseModal.js  coursesList.js  createPlanModal.js  generatePlanModal.js  header.js  planTopicsTable.js  sessionCard.js  sessionList.js  sessionModal.js  sessionsTable.js  sidebar.tsx  streaksCard.js  studyPlanCard.js  termCard.js  (+8 more)
frontend/study-frontend/: package.json
(+48 files in other folders)
